# yaomu

./: .env  .gitignore  README.md  pyproject.toml
admin/res/: obscenity.json
src/plugins/admin/: __init__.py  brush_up.py  obscenity.py  path.py  utils.py
