[project]
name = "yaomu"
version = "0.1.0"
description = "yaomu"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.poetry]
name = "yaomu"
version = "0.1.0"
description = ""
authors = ["wling <wlingzhenyu@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.3.2"}
pydantic-core = "^2.20.1"
annotated-types = "^0.7.0"
nonebot-adapter-onebot = "^2.4.4"
h11 = "^0.14.0"
uvicorn = "^0.30.1"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"
